--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,10 +3,12 @@
   --main-white-color: #ffffff;
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
+  --main-dark-color: #000000;
 }
 
 .body--dark {
   --main-white-color: #000000;
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
+  --main-dark-color: #ffffff;
 }
