--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -28,15 +28,20 @@ button {
 .site-body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  // height: 100vh;
   margin: 0;
   padding: 0;
   font-family: "Montserrat", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
-  background-color: var(--main-body-color);
+  background-color: var(--main-dark-color);
 }
-
+.site-body__home {
+  background-image: url("../images/main-bg.png");
+  background-size: 1600px;
+  background-position: 0 0;
+  height: 6800px;
+}
 /* STICKY-FOOTER */
 .site-main {
   flex-grow: 1;
