--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -30,7 +30,7 @@
 @font-face {
   font-display: swap;
   font-family: "Proxima Nova";
-  font-style: normal;
+  font-style: italic;
   font-weight: 400;
   src: url("../fonts/proxima_nova_condensed_regular_italic.woff2")
       format("woff2"),
@@ -49,7 +49,7 @@
 @font-face {
   font-display: swap;
   font-family: "Proxima Nova";
-  font-style: normal;
+  font-style: italic;
   font-weight: 600;
   src: url("../fonts/proxima_nova_condensed_semibold_italic.woff2")
       format("woff2"),
