--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -31,16 +31,18 @@ button {
   // height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", "Arial", sans-serif;
+  font-family: "Proxima Nova", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   background-color: var(--main-dark-color);
+  color: var(--main-white-color);
 }
 .site-body__home {
   background-image: url("../images/main-bg.png");
   background-size: 1600px;
-  background-position: 0 0;
+  background-position: center 0;
   height: 6800px;
+  background-repeat: no-repeat;
 }
 /* STICKY-FOOTER */
 .site-main {
