--- a/css/main.css
+++ b/css/main.css
@@ -435,7 +435,6 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
- // height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Montserrat", "Arial", sans-serif;
@@ -449,7 +448,6 @@ button {
   background-size: 1600px;
   background-position: 0 0;
   height: 6800px;
-
 }
 
 /* STICKY-FOOTER */
@@ -478,4 +476,732 @@ button {
   width: 100%;
   max-width: 1400px;
   padding: 0 20px;
+  margin: 0 auto;
+}
+
+.about {
+  padding: 120px 0 95px 0;
+}
+
+.about-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-wrapper__title {
+  width: 100%;
+  max-width: 569px;
+  margin: 0;
+}
+
+.about-wrapper__title-text {
+  font-style: normal;
+  font-size: 50px;
+  line-height: 64px;
+  font-weight: 600;
+  text-align: left;
+  margin: 0;
+  padding-bottom: 20px;
+  font-family: "Futura PT";
+  color: var(--main-white-color);
+}
+
+.about-wrapper__title-parag {
+  font-style: normal;
+  font-size: 18px;
+  line-height: 140%;
+  font-weight: 400;
+  text-align: left;
+  font-family: "Futura PT";
+  margin: 0;
+  color: var(--main-white-color);
+}
+
+.about-list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.about-list__item {
+  width: 100%;
+  max-width: 270px;
+  margin: 0;
+  text-align: center;
+}
+
+.about-list__item:nth-child(1) {
+  margin-bottom: 40px;
+}
+
+.about-list__item:nth-child(2) {
+  margin-bottom: 40px;
+}
+
+.about-list__item-text {
+  font-style: normal;
+  font-size: 50px;
+  line-height: 100%;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 12px;
+  font-family: "Futura PT";
+  background: linear-gradient(109.09deg, rgba(0, 40, 248, 0.89) 0%, #6911AD 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.about-list__item-parag {
+  font-style: normal;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: center;
+  font-family: "Futura PT";
+  margin: 0;
+  color: var(--main-white-color);
+}
+
+@media only screen and (max-width: 1100px) {
+  .about {
+    padding: 100px 0 80px 0;
+  }
+  .about-wrapper__title-text {
+    font-style: normal;
+    font-size: 30px;
+    line-height: 34px;
+    font-weight: 600;
+    text-align: left;
+    padding-bottom: 15px;
+  }
+  .about-list__item:nth-child(1) {
+    margin-bottom: 40px;
+  }
+  .about-list__item:nth-child(2) {
+    margin-bottom: 40px;
+  }
+  .about-list__item:nth-child(3) {
+    margin-bottom: 40px;
+  }
+  .about-list__item-text {
+    font-style: normal;
+    font-size: 40px;
+    line-height: 100%;
+    font-weight: 600;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 780px) {
+  .about {
+    padding: 94px 0 80px 0;
+  }
+  .about-wrapper {
+    display: block;
+  }
+  .about-wrapper__title {
+    padding-bottom: 40px;
+  }
+  .about-wrapper__title-text {
+    font-style: normal;
+    font-size: 24px;
+    line-height: 31px;
+    font-weight: 600;
+    text-align: left;
+    padding-bottom: 20px;
+  }
+  .about-wrapper__title-parag {
+    font-style: normal;
+    font-size: 16px;
+    line-height: 110%;
+    font-weight: 400;
+    text-align: left;
+  }
+  .about-list__item:nth-child(1) {
+    margin-bottom: 40px;
+  }
+  .about-list__item:nth-child(2) {
+    margin-bottom: 40px;
+  }
+  .about-list__item:nth-child(3) {
+    margin-bottom: 40px;
+  }
+  .about-list__item:nth-child(4) {
+    margin-bottom: 40px;
+  }
+  .about-list__item-text {
+    font-style: normal;
+    font-size: 30px;
+    line-height: 100%;
+    font-weight: 600;
+    text-align: center;
+  }
+}
+.advantage {
+  padding-bottom: 120px;
+}
+
+.advantage-wrapper__title {
+  font-style: normal;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 700;
+  text-align: center;
+  margin: 0;
+  font-family: "Proxima Nova";
+  color: var(--main-white-color);
+}
+
+.advantage-list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.advantage-list__item {
+  width: 100%;
+  max-width: 433px;
+  margin: 0;
+  margin-top: 40px;
+  padding: 30px 24px 24px 24px;
+  background: rgba(17, 19, 23, 0.5);
+  border: 1px solid #4E4E4E;
+  -webkit-backdrop-filter: blur(2.5px);
+          backdrop-filter: blur(2.5px);
+  border-radius: 20px;
+}
+
+.advantage-list__item::before {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 70px;
+  background-image: url("../images/individual.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  left: 0;
+  right: 0;
+}
+
+.advantage-list__item:nth-child(2)::before {
+  background-image: url("../images/expertisa.png");
+}
+
+.advantage-list__item:nth-child(3)::before {
+  background-image: url("../images/professional.png");
+}
+
+.advantage-list__item:nth-child(4)::before {
+  background-image: url("../images/individual.png");
+}
+
+.advantage-list__item:nth-child(5)::before {
+  background-image: url("../images/expertisa.png");
+}
+
+.advantage-list__item:nth-child(6)::before {
+  background-image: url("../images/professional.png");
+}
+
+.advantage-list__item-text {
+  font-style: normal;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 700;
+  text-align: left;
+  font-family: "Proxima Nova";
+  margin: 0;
+  padding-top: 35px;
+  color: var(--main-white-color);
+}
+
+.advantage-list__item-text::after {
+  content: "";
+  display: block;
+  margin-top: 10px;
+  width: 50px;
+  height: 3px;
+  background: #686464;
+  border-radius: 20px;
+}
+
+.advantage-list__item-parag {
+  font-style: normal;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  text-align: left;
+  color: var(--main-white-color);
+  margin: 0;
+  padding-top: 28px;
+}
+
+@media only screen and (max-width: 920px) {
+  .advantage-list {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .advantage-list__item {
+    width: 100%;
+    max-width: 633px;
+  }
+}
+@media only screen and (max-width: 720px) {
+  .advantage {
+    padding-bottom: 80px;
+  }
+  .advantage-wrapper__title {
+    padding-bottom: 20px;
+  }
+  .advantage-list__item-none {
+    display: none;
+  }
+  .advantage-list__item {
+    width: 100%;
+    max-width: 433px;
+  }
+  .advantage-list__item {
+    margin-top: 20px;
+  }
+  .advantage-list__item::before {
+    width: 50px;
+    height: 50px;
+  }
+}
+.service {
+  padding-bottom: 120px;
+}
+
+.service-wrapper {
+  padding: 40px 121px 89px 122px;
+  background: rgba(14, 16, 20, 0.9);
+  border: 1px solid #4E4E4E;
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+  border-radius: 20px;
+}
+
+.service-wrapper__title {
+  font-style: normal;
+  font-size: 36px;
+  line-height: 44px;
+  font-weight: 700;
+  text-align: center;
+  margin: 0;
+  padding-bottom: 88px;
+  font-family: "Proxima Nova";
+  color: var(--main-white-color);
+}
+
+.service-list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.service-list__item {
+  width: 100%;
+  max-width: 300px;
+  margin: 0;
+  text-align: center;
+}
+
+.service-list__item::before {
+  content: "";
+  display: block;
+  width: 69px;
+  height: 69px;
+  margin: 0 auto;
+  background-image: url("../images/website.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 32px;
+  background-color: rgba(84, 84, 212, 0.1);
+  border-radius: 50px;
+}
+
+.service-list__item:nth-child(1) {
+  margin-bottom: 121px;
+}
+
+.service-list__item:nth-child(2) {
+  margin-bottom: 121px;
+}
+
+.service-list__item:nth-child(3) {
+  margin-bottom: 121px;
+}
+
+.service-list__item:nth-child(2)::before {
+  background-color: rgba(240, 64, 55, 0.1);
+  background-image: url("../images/ux.svg");
+}
+
+.service-list__item:nth-child(3)::before {
+  background-color: rgba(254, 220, 90, 0.1);
+  background-image: url("../images/mobil.svg");
+}
+
+.service-list__item:nth-child(4)::before {
+  background-color: rgba(254, 220, 90, 0.1);
+  background-image: url("../images/smm.svg");
+}
+
+.service-list__item:nth-child(5)::before {
+  background-color: rgba(84, 84, 212, 0.1);
+  background-image: url("../images/grafik.svg");
+}
+
+.service-list__item:nth-child(6)::before {
+  background-color: rgba(240, 64, 55, 0.1);
+  background-image: url("../images/motion.svg");
+}
+
+.service-list__item-title {
+  font-style: normal;
+  font-size: 28px;
+  line-height: 38px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0px;
+  letter-spacing: -0.750316px;
+  font-family: "Nunito Sans";
+  color: var(--main-white-color);
+}
+
+.service-list__item-parag {
+  font-style: normal;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+  text-align: center;
+  font-family: "Nunito Sans";
+  letter-spacing: -0.500211px;
+  margin: 0;
+  color: var(--main-white-color);
+}
+
+@media only screen and (max-width: 880px) {
+  .service-list {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .service-list__item {
+    width: 100%;
+    max-width: 250px;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .service {
+    padding-bottom: 80px;
+  }
+  .service-wrapper {
+    padding: 30px 30px 40px 30px;
+  }
+  .service-wrapper__title {
+    font-style: normal;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 700;
+    text-align: center;
+    padding-bottom: 0px;
+  }
+  .service-list {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .service-list__item {
+    width: 100%;
+    max-width: 350px;
+    margin-top: 40px;
+  }
+  .service-list__item:nth-child(1) {
+    margin-bottom: 0;
+  }
+  .service-list__item:nth-child(2) {
+    margin-bottom: 0;
+  }
+  .service-list__item:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .service-list__item-title {
+    font-style: normal;
+    font-size: 24px;
+    line-height: 33px;
+    font-weight: 600;
+    text-align: center;
+    padding: 20px 0px 10px 0px;
+  }
+  .service-list__item-parag {
+    font-style: normal;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    text-align: center;
+  }
+}
+.site-footer {
+  padding: 81px 0;
+  background: rgba(14, 16, 20, 0.9);
+  border-top: 1px solid #4E4E4E;
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+  border-radius: 20px 20px 0px 0px;
+}
+
+.footer-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.logo-wrapper {
+  width: 158px;
+  height: 66px;
+  margin-right: 20px;
+}
+
+.address-wrapper {
+  width: 100%;
+  max-width: 434px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 20px;
+}
+
+.address-wrapper::before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  background-image: url("../../images/location.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.address-in {
+  font-style: normal;
+  font-size: 16px;
+  line-height: 25px;
+  font-weight: 600;
+  text-align: left;
+  font-family: "Proxima Nova";
+  color: var(--main-white-color);
+  margin-left: 30px;
+}
+
+.phone-wrapper {
+  width: 100%;
+  max-width: 186px;
+  margin: 0;
+  margin-right: 20px;
+}
+
+.phone-tel {
+  display: inline-block;
+  text-decoration: none;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 600;
+  text-align: left;
+  letter-spacing: 0.06em;
+  font-family: "Proxima Nova";
+  color: var(--main-white-color);
+  padding-left: 30px;
+  position: relative;
+}
+
+.phone-tel::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin: 0;
+  position: absolute;
+  background-image: url("../../images/phone.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  left: 0;
+}
+
+.phone {
+  margin-bottom: 25px;
+}
+
+.icons-list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.icon-face {
+  margin: 0 25px;
+}
+
+@media only screen and (max-width: 1017px) {
+  .logo-wrapper {
+    width: 100%;
+    max-width: 204px;
+    margin-bottom: 25px;
+  }
+  .address-wrapper {
+    width: 100%;
+    max-width: 404px;
+    margin-bottom: 25px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .site-footer {
+    padding: 43px 0;
+  }
+  .footer-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .logo-wrapper {
+    width: 176px;
+    height: 66px;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .address-wrapper {
+    width: 100%;
+    max-width: 434px;
+    margin-right: 0;
+    margin-bottom: 23px;
+  }
+  .phone-wrapper {
+    width: 100%;
+    max-width: 186px;
+    margin: 0;
+    margin-right: 0;
+    margin-bottom: 32px;
+  }
 }/*# sourceMappingURL=main.css.map */
