--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -49,7 +49,7 @@ ol {
 .site-body__home {
   background-image: url("../images/main-bg.png");
   background-size: 1600px;
-  background-position: center 0;
+  background-position: center top 700px;
   height: 6800px;
   background-repeat: no-repeat;
 }
