--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@
   --main-blue-color: #5454d4;
   --main-dark-color: #000000;
   --main-header-color: #17191db3;
+  --main-teach-color: #0e1014e6;
 }
 
 .body--dark {
@@ -13,4 +14,5 @@
   --main-blue-color: #5454d4;
   --main-dark-color: #ffffff;
   --main-header-color: #17191d1a;
+  --main-teach-color: #ffffffe6;
 }
