--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,8 @@
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
   --main-dark-color: #000000;
+  --service-color: #0e1014e6;
+  --input-color: #272727;
 }
 
 .body--dark {
@@ -11,4 +13,6 @@
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
   --main-dark-color: #ffffff;
+  --service-color: #ffffffe6;
+  --input-color: #AAA;
 }
