--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,28 +4,21 @@
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
   --main-dark-color: #000000;
-<<<<<<< HEAD
+
   --card-dark-color: rgba(17, 19, 23, 0.5);
   --card-dark-border: #4e4e4e;
   --service-cards-color: rgba(14, 16, 20, 0.9);
-=======
 
   --service-color: #0e1014e6;
   --input-color: #272727;
 
   --card-dark-color: rgba(17, 19, 23, 0.5);
-  --card-dark-border:#4E4E4E;
-  --service-cards-color:rgba(14, 16, 20, 0.9);
->>>>>>> 5101d14de0087a113c2c40334f7a4cdd53e804e2
+  --card-dark-border: #4e4e4e;
+  --service-cards-color: rgba(14, 16, 20, 0.9);
 
   --main-header-color: #17191db3;
 
   --main-teach-color: #0e1014e6;
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 5101d14de0087a113c2c40334f7a4cdd53e804e2
 }
 
 .body--dark {
@@ -34,27 +27,18 @@
   --main-blue-color: #5454d4;
   --main-dark-color: #ffffff;
 
-<<<<<<< HEAD
-=======
   --service-color: #ffffffe6;
-  --input-color: #AAA;
+  --input-color: #aaa;
 
-
->>>>>>> 5101d14de0087a113c2c40334f7a4cdd53e804e2
   --card-dark-color: rgba(243, 243, 243, 0.5);
   --card-dark-border: #999;
   --service-cards-color: rgba(255, 255, 255, 0.9);
 
-<<<<<<< HEAD
-  --main-header-color: #17191d1a;
-
-  --main-teach-color: #ffffffe6;
-=======
-
-
   --main-header-color: #17191d1a;
 
   --main-teach-color: #ffffffe6;
 
->>>>>>> 5101d14de0087a113c2c40334f7a4cdd53e804e2
+  --main-header-color: #17191d1a;
+
+  --main-teach-color: #ffffffe6;
 }
