--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,9 @@
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
   --main-dark-color: #000000;
+  --card-dark-color: rgba(17, 19, 23, 0.5);
+  --card-dark-border:#4E4E4E;
+  --service-cards-color:rgba(14, 16, 20, 0.9);
 }
 
 .body--dark {
@@ -11,4 +14,10 @@
   --main-porple-color: #6911ad;
   --main-blue-color: #5454d4;
   --main-dark-color: #ffffff;
+  --card-dark-color: rgba(243, 243, 243, 0.5);
+  --card-dark-border:#999;
+  --service-cards-color:rgba(255, 255, 255, 0.9);
+
+
+
 }
