--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -1,11 +1,11 @@
 .service {
-    padding-bottom: 120px;
+    padding: 120px 0px;
 }
 
 .service-wrapper {
     padding: 40px 121px 89px 122px;
-    background: rgba(14, 16, 20, 0.9);
-    border: 1px solid #4E4E4E;
+    background:  var(--service-cards-color);
+    border: 1px solid var(--card-dark-border);
     backdrop-filter: blur(1px);
     border-radius: 20px;
 }
