--- a/scss/blocks/_projects.scss
+++ b/scss/blocks/_projects.scss
@@ -58,6 +58,9 @@
 .projects__item--active{
   background: linear-gradient(93.5deg, #1E11AD 12.37%, rgba(105, 17, 173, 0.95) 85.28%);
   border-radius: 30px;
+  .projects__link {
+    color: #fff !important;
+  }
 }
 
 .choose {
