--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -6,6 +6,9 @@
   width: 100%;
   border-radius: 65px;
 }
+.our-team {
+  padding-bottom: 120px;
+}
 .user-contact {
   width: 296px;
   padding: 15px;
